--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -30,6 +30,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
+                    android:scaleType="centerCrop"
                     android:id="@+id/img_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
