--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/logoFragment">
+    app:startDestination="@id/detailCallFragment">
 
     <fragment
         android:id="@+id/logoFragment"
@@ -17,12 +17,12 @@
         tools:layout="@layout/fragment_image" />
     <fragment
         android:id="@+id/profileFragment"
-        android:name="com.on.callapps.ui.ProfileFragment"
+        android:name="com.on.callapps.ui.profile.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.on.callapps.ui.SettingsFragment"
+        android:name="com.on.callapps.ui.settings.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
@@ -30,4 +30,14 @@
         android:name="com.on.callapps.ui.contact.ContactFragment"
         android:label="fragment_contact"
         tools:layout="@layout/fragment_contact" />
+    <fragment
+        android:id="@+id/playGameFragment"
+        android:name="com.on.callapps.ui.playGame.PlayGameFragment"
+        android:label="fragment_play_game"
+        tools:layout="@layout/fragment_play_game" />
+    <fragment
+        android:id="@+id/detailCallFragment"
+        android:name="com.on.callapps.ui.detailCall.DetailCallFragment"
+        android:label="fragment_detail_call"
+        tools:layout="@layout/fragment_detail_call" />
 </navigation>
