--- a/app/src/main/res/layout/dialog_target.xml
+++ b/app/src/main/res/layout/dialog_target.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="12dp"
+    android:padding="12dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="12dp">
 
@@ -12,6 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/btn_no"
             android:layout_gravity="end"
             android:layout_margin="20dp"
             android:layout_width="wrap_content"
@@ -30,6 +32,9 @@
             android:layout_marginTop="24dp"
             android:textColor="#0C1A3F"
             android:textSize="16sp"
+            android:id="@+id/tv_title"
+            android:layout_margin="16dp"
+            android:textAlignment="center"
             android:text="Watch the short video to unlock the character "
             android:layout_gravity="center"
             android:layout_width="wrap_content"
@@ -48,12 +53,14 @@
             android:layout_marginHorizontal="16dp"
             android:text="WATCH AD"
             android:textSize="14sp"
+            android:layout_marginTop="16dp"
             android:textColor="@color/white"
             android:gravity="center"
+            android:id="@+id/btn_yes"
             android:paddingVertical="10dp"
             android:background="@drawable/btn_record"
             android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
