--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -5,28 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/prim"
-    tools:context=".ui.ImageFragment">
+    tools:context=".ui.image.ImageFragment">
 
-        <androidx.cardview.widget.CardView
+        <ImageView
+            android:src="@drawable/ic_image_dog"
             app:layout_constraintBottom_toTopOf="@id/btn_rate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_marginTop="36dp"
-            app:cardCornerRadius="12dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="64dp"
-            android:layout_height="0dp">
-            <TextView
-                android:textColor="@color/tv_shadow"
-                android:textSize="34sp"
-                android:text="Image"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </androidx.cardview.widget.CardView>
+            android:layout_height="0dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
