--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,4 +30,13 @@
         android:name="com.on.callapps.ui.contact.ContactFragment"
         android:label="fragment_contact"
         tools:layout="@layout/fragment_contact" />
+    <fragment
+        android:id="@+id/callFragment"
+        android:name="com.on.callapps.ui.call.CallFragment"
+        android:label="fragment_call"
+        tools:layout="@layout/fragment_call" />
+    <fragment
+        android:id="@+id/videoCallFragment"
+        android:name="com.on.callapps.ui.call.VideoCallFragment"
+        android:label="VideoCallFragment" />
 </navigation>
