--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -38,58 +38,63 @@
         app:layout_constraintTop_toBottomOf="@id/card" />
 
     <TextView
-        android:textColor="@color/white"
+        android:id="@+id/btn_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="100dp"
+        android:background="@drawable/btn_record"
         android:gravity="center"
         android:padding="12dp"
-        android:visibility="invisible"
-        android:id="@+id/btn_continue"
         android:text="CONTINUE"
+        android:textColor="@color/white"
         android:textSize="14sp"
-        android:background="@drawable/btn_record"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/tv_by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:text="By click to “continue” you agree to Privacy"
         android:textColor="@color/tv_shadow"
         android:textSize="14sp"
         android:visibility="invisible"
-        android:id="@+id/tv_by"
-        android:text="By click to “continue” you agree to Privacy"
-        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@id/btn_continue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
         android:layout_marginHorizontal="40dp"
+        android:indeterminate="false"
         android:indeterminateDrawable="@drawable/progres_bar"
-        app:layout_constraintTop_toBottomOf="@id/tv_by"
+        android:max="100"
+        android:minWidth="200dp"
+        android:minHeight="50dp"
+        android:progress="1"
+        android:progressDrawable="@drawable/progres_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="match_parent"
-        android:indeterminate="true"
-        android:id="@+id/progress_bar"
-        android:progressDrawable="@drawable/progres_bar"
-        android:layout_height="24dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_by" />
+
 
     <TextView
-        android:text="0"
-        android:textSize="12sp"
-        android:textColor="@color/white"
         android:id="@+id/tv_procent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/progress_bar"
         app:layout_constraintEnd_toEndOf="@id/progress_bar"
         app:layout_constraintStart_toStartOf="@id/progress_bar"
-        app:layout_constraintTop_toTopOf="@id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@id/progress_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
