--- a/app/src/main/res/layout/item_correspondence_friends.xml
+++ b/app/src/main/res/layout/item_correspondence_friends.xml
@@ -6,10 +6,10 @@
 
     <TextView
         android:text="Hi, blonde"
-        android:layout_gravity="end"
-        android:id="@+id/tv_message"
+        android:layout_gravity="start"
+        android:id="@+id/tv_message_friend"
         android:layout_marginVertical="12dp"
-        android:background="@drawable/tv_message"
+        android:background="@drawable/tv_message_friend"
         android:textSize="14sp"
         android:paddingVertical="12dp"
         android:paddingHorizontal="16dp"
