--- a/app/src/main/res/layout/fragment_video_call.xml
+++ b/app/src/main/res/layout/fragment_video_call.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.call.CallFragment">
 
+    <androidx.camera.view.PreviewView
+        android:id="@+id/viewFinder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/ll_header"
@@ -88,12 +92,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:id="@+id/ib_reset_call_red"
             android:src="@drawable/ic_call_reset"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
+            android:id="@+id/ib_accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
