--- a/app/src/main/res/layout/fragment_detail_call.xml
+++ b/app/src/main/res/layout/fragment_detail_call.xml
@@ -167,15 +167,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_call"
+        android:elevation="10dp"
+        app:elevation= "10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_marginTop="42dp"
         android:background="@drawable/btn_record"
         android:paddingVertical="10dp"
         android:paddingStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/constraint_for_image"
-        tools:layout_editor_absoluteX="20dp">
+        app:layout_constraintTop_toBottomOf="@id/constraint_for_image">
 
         <ImageView
             android:layout_width="wrap_content"
