--- a/app/src/main/res/layout/fragment_video_call.xml
+++ b/app/src/main/res/layout/fragment_video_call.xml
@@ -4,12 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.call.CallFragment">
+    tools:context=".ui.call.VideoCallFragment">
 
-    <androidx.camera.view.PreviewView
-        android:id="@+id/viewFinder"
+    <SurfaceView
+        android:id="@+id/cameraSurfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/ll_header"
