--- a/app/src/main/res/layout/dialog_choose.xml
+++ b/app/src/main/res/layout/dialog_choose.xml
@@ -16,6 +16,7 @@
             android:layout_gravity="center"
             android:id="@+id/tv_choose"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:text="Choose:"
             android:textAlignment="center"
             android:textColor="@color/tv_blue_text"
@@ -32,6 +33,7 @@
 
             <TextView
                 android:id="@+id/tv_chat"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingVertical="10dp"
@@ -79,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="10dp"
                 android:text="Call"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:textColor="@color/tv_blue_text"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -123,6 +126,7 @@
                 android:paddingVertical="10dp"
                 android:text="Video Call"
                 android:textColor="@color/tv_blue_text"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -164,6 +168,7 @@
                 android:id="@+id/tv_live"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
                 android:paddingVertical="10dp"
                 android:text="live"
                 android:textColor="@color/red"
