--- a/app/src/main/res/layout/item_correspondence_friends.xml
+++ b/app/src/main/res/layout/item_correspondence_friends.xml
@@ -7,6 +7,7 @@
     <TextView
         android:text="Hi, blonde"
         android:layout_gravity="start"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:id="@+id/tv_message_friend"
         android:layout_marginVertical="12dp"
         android:background="@drawable/tv_message_friend"
