--- a/app/src/main/res/layout/fragment_detail_call.xml
+++ b/app/src/main/res/layout/fragment_detail_call.xml
@@ -71,6 +71,7 @@
         android:text="Thanks for you calling!"
         android:textColor="@color/black"
         android:textSize="24sp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +85,7 @@
         android:text="More characters"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_name" />
@@ -110,7 +112,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/frame_20" />
+                android:src="@drawable/ic_image_dog" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -127,7 +129,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/frame_new4" />
+                android:src="@drawable/c2" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -143,7 +145,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/frame_27" />
+                android:src="@drawable/c4" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -160,15 +162,13 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/frame_26" />
+                android:src="@drawable/c3" />
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_call"
-        android:elevation="10dp"
-        app:elevation= "10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -195,6 +195,7 @@
             android:text="CALL AGAIN"
             android:textColor="@color/white"
             android:textSize="14sp"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -226,6 +227,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Play games"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -257,6 +259,7 @@
         <TextView
             android:paddingVertical="10dp"
             android:textColor="@color/white"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:text="Share"
             android:id="@+id/btn_share"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -295,6 +298,7 @@
             android:layout_height="wrap_content"
             android:paddingVertical="10dp"
             android:text="Rate us"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textColor="@color/tv_blue_text"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
