--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -41,6 +41,7 @@
         <TextView
             android:paddingVertical="10dp"
             android:id="@+id/tv_rate_us"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="10dp"
@@ -62,6 +63,7 @@
             android:paddingVertical="12dp"
             android:gravity="center"
             android:text="START"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textStyle="bold"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="16dp"
@@ -96,6 +98,7 @@
         <TextView
             android:paddingVertical="10dp"
             android:id="@+id/tv_exit"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="10dp"
