--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -29,6 +29,8 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:fontFamily="@font/ff_montserrat_alternates_bold"
         android:layout_marginTop="26dp"
         android:text="Dog Fake\nVideo Call"
         android:textColor="@color/tv_color"
@@ -39,6 +41,7 @@
 
     <TextView
         android:id="@+id/btn_continue"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -71,6 +74,7 @@
             android:text="By click to “continue” you agree to"
             android:textColor="@color/tv_shadow"
             android:textSize="14sp"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -88,6 +92,7 @@
                 android:id="@+id/tv_privacy"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:text="Privacy"
@@ -134,6 +139,7 @@
         android:text="0"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         app:layout_constraintBottom_toBottomOf="@id/progress_bar"
         app:layout_constraintEnd_toEndOf="@id/progress_bar"
         app:layout_constraintStart_toStartOf="@id/progress_bar"
