--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -32,6 +32,7 @@
             android:paddingVertical="10dp"
             android:textColor="@color/white"
             android:text="Play games"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +85,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:paddingVertical="10dp"
             android:id="@+id/tv_exit"
             android:layout_width="wrap_content"
