--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -11,6 +11,7 @@
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:text="ENDING THE CALL IS IN PROGRESS"
         android:textColor="@color/white"
         android:textSize="14sp"
@@ -43,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:textStyle="bold"
         android:textColor="#3f6de3"
         android:textSize="12sp"
