--- a/app/src/main/res/layout/item_correspondence.xml
+++ b/app/src/main/res/layout/item_correspondence.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
-        android:text="Hi, blonde"
-        android:layout_gravity="end"
         android:id="@+id/tv_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
         android:layout_marginVertical="12dp"
         android:background="@drawable/tv_message"
-        android:textSize="14sp"
-        android:paddingVertical="12dp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:paddingHorizontal="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:paddingVertical="12dp"
+        android:text="Hi, blonde"
+        android:textSize="14sp" />
 
 </LinearLayout>
