--- a/app/src/main/res/layout/item_live.xml
+++ b/app/src/main/res/layout/item_live.xml
@@ -26,6 +26,7 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="Character"
@@ -37,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:text="Hello"
         android:textSize="14sp"
         android:id="@+id/tv_text"
