--- a/app/src/main/res/layout/fragment_detail_call.xml
+++ b/app/src/main/res/layout/fragment_detail_call.xml
@@ -43,22 +43,15 @@
         android:id="@+id/card_for_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="100dp"
-        android:background="@color/img_shadow"
         app:cardCornerRadius="300dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/content_private">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@color/img_shadow" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/image" />
+            android:layout_width="138dp"
+            android:layout_height="138dp"
+            android:src="@drawable/ic_image_dog" />
 
 
     </androidx.cardview.widget.CardView>
