--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -53,7 +53,7 @@
             android:layout_marginStart="16dp"
 android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:layout_marginTop="8dp"
-            android:text="Alex Davids"
+            android:text="Max"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@id/tv_status"
             app:layout_constraintStart_toEndOf="@id/card"
