--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Alex Davids"
+        android:text="Max"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
