--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.image.ImageFragment">
 
         <ImageView
+            android:id="@+id/iv_logo"
             android:src="@drawable/ic_image_dog"
             app:layout_constraintBottom_toTopOf="@id/btn_rate"
             app:layout_constraintEnd_toEndOf="parent"
