--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/img_logo"
+            android:id="@+id/iv_logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_image_dog" />
