--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@id/content">
 
         <ImageView
+            android:id="@+id/iv_logo"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/ic_image_dog" />
@@ -72,203 +73,204 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/card" />
 
-    <TextView
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:id="@+id/tv_charecters"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/btn_exit"
-        android:drawableStart="@drawable/ic_profile"
-        android:drawableEnd="@drawable/chevron_left"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="Charecters"
-        android:textColor="@color/tv_blue_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_name" />
-
-    <TextView
-        android:id="@+id/tv_chat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_exit"
-        android:drawableStart="@drawable/ic_ph_chat"
-        android:drawableEnd="@drawable/chevron_left"
-        android:drawablePadding="10dp"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="CHAT"
-        android:textColor="@color/tv_blue_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_charecters" />
-
-    <TextView
-        android:id="@+id/tv_call"
-        android:layout_width="match_parent"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_exit"
-        android:drawableStart="@drawable/ic_local_phone"
-        android:drawableEnd="@drawable/chevron_left"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="CALL"
-        android:textColor="@color/tv_blue_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_chat" />
-
-    <TextView
-        android:id="@+id/tv_video_call"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_exit"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:drawableStart="@drawable/ic_video"
-        android:drawableEnd="@drawable/chevron_left"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="Video CALL"
-        android:textColor="@color/tv_blue_text"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_call" />
-
-    <TextView
-        android:id="@+id/tv_live"
-        android:layout_width="match_parent"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_exit"
-        android:drawableStart="@drawable/ic_live"
-        android:drawableEnd="@drawable/ic_on_left"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="live"
-        android:textColor="@color/red"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_call" />
-
-    <TextView
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
-        android:id="@+id/tv_play"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_exit"
-        android:drawableStart="@drawable/gamepad"
-        android:drawableEnd="@drawable/ic_chevron_left_green"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:text="Play games"
-        android:textColor="@color/green"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_live" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tv_share"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_record"
-        app:layout_constraintEnd_toStartOf="@id/tv_rate"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_play" >
-
-        <ImageView
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/ic_share"
-            app:layout_constraintEnd_toStartOf="@id/btn_share"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        android:layout_height="wrap_content">
         <TextView
             android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:paddingVertical="10dp"
-            android:textColor="@color/white"
-            android:text="Share"
-            android:id="@+id/btn_share"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="16sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/tv_rate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/btn_exit"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_share"
-        app:layout_constraintTop_toBottomOf="@id/tv_play">
-
-        <ImageView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_charecters"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:src="@drawable/like"
-            app:layout_constraintBottom_toBottomOf="@id/btn_rate"
-            app:layout_constraintEnd_toStartOf="@id/btn_rate"
-            app:layout_constraintTop_toTopOf="@id/btn_rate" />
-
-        <TextView
-            android:id="@+id/btn_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/btn_exit"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
             android:paddingVertical="10dp"
-            android:text="Rate us"
+            android:text="Charecters"
             android:textColor="@color/tv_blue_text"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            android:fontFamily="@font/ff_montserrat_alternates_regular"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:drawableStartCompat="@drawable/ic_profile"
+            app:drawableEndCompat="@drawable/chevron_left" />
+
+        <TextView
+            android:id="@+id/tv_chat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            android:drawablePadding="10dp"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="CHAT"
+            android:textColor="@color/tv_blue_text"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_charecters"
+            app:drawableStartCompat="@drawable/ic_ph_chat"
+            app:drawableEndCompat="@drawable/chevron_left" />
+
+        <TextView
+            android:id="@+id/tv_call"
+            android:layout_width="match_parent"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="CALL"
+            android:textColor="@color/tv_blue_text"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_chat"
+            app:drawableStartCompat="@drawable/ic_local_phone"
+            app:drawableEndCompat="@drawable/chevron_left" />
+
+        <TextView
+            android:id="@+id/tv_video_call"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="Video CALL"
+            android:textColor="@color/tv_blue_text"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_call"
+            app:drawableStartCompat="@drawable/ic_video"
+            app:drawableEndCompat="@drawable/chevron_left" />
+
+        <TextView
+            android:id="@+id/tv_live"
+            android:layout_width="match_parent"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="live"
+            android:textColor="@color/red"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_video_call"
+            app:drawableStartCompat="@drawable/ic_live"
+            app:drawableEndCompat="@drawable/ic_on_left" />
+
+        <TextView
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:id="@+id/tv_play"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="Play games"
+            android:textColor="@color/green"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_live"
+            app:drawableStartCompat="@drawable/gamepad"
+            app:drawableEndCompat="@drawable/ic_chevron_left_green" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/tv_share"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_record"
+            app:layout_constraintEnd_toStartOf="@id/tv_rate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_play" >
+
+            <ImageView
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_share"
+                app:layout_constraintEnd_toStartOf="@id/btn_share"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
+                android:paddingVertical="10dp"
+                android:textColor="@color/white"
+                android:text="Share"
+                android:id="@+id/btn_share"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/tv_rate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_exit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_share"
+            app:layout_constraintTop_toBottomOf="@id/tv_play">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/like"
+                app:layout_constraintBottom_toBottomOf="@id/btn_rate"
+                app:layout_constraintEnd_toStartOf="@id/btn_rate"
+                app:layout_constraintTop_toTopOf="@id/btn_rate" />
+
+            <TextView
+                android:id="@+id/btn_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
+                android:text="Rate us"
+                android:textColor="@color/tv_blue_text"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:fontFamily="@font/ff_montserrat_alternates_regular"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
