--- a/app/src/main/res/layout/fragment_video_call.xml
+++ b/app/src/main/res/layout/fragment_video_call.xml
@@ -32,6 +32,7 @@
             app:cardCornerRadius="300dp">
 
             <ImageView
+                android:id="@+id/iv_logo"
                 android:layout_width="138dp"
                 android:layout_height="138dp"
                 android:src="@drawable/ic_image_dog" />
@@ -39,6 +40,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
