--- a/app/src/main/res/layout/fragment_detail_call.xml
+++ b/app/src/main/res/layout/fragment_detail_call.xml
@@ -62,10 +62,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:text="Thanks for you calling!"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,17 +76,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/ff_montserrat_alternates_regular"
         android:text="More characters"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:fontFamily="@font/ff_montserrat_alternates_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/constraint_for_image"
         android:layout_width="0dp"
+        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="28dp"
         android:layout_marginTop="18dp"
@@ -100,10 +101,13 @@
             android:layout_height="64dp"
             app:cardCornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5">
 
             <ImageView
+                android:id="@+id/contact1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_image_dog" />
@@ -113,14 +117,17 @@
             android:id="@+id/card_two"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginHorizontal="16dp"
             app:cardCornerRadius="100dp"
+            android:layout_marginHorizontal="22dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/card_tree"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/card_"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5">
 
             <ImageView
+                android:id="@+id/contact2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/c2" />
@@ -130,13 +137,15 @@
             android:id="@+id/card_four"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginStart="16dp"
             app:cardCornerRadius="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5">
 
             <ImageView
+                android:id="@+id/contact3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/c4" />
@@ -146,30 +155,33 @@
             android:id="@+id/card_tree"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_marginHorizontal="16dp"
             app:cardCornerRadius="100dp"
+            android:layout_marginStart="22dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/card_four"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/card_two"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5">
 
             <ImageView
+                android:id="@+id/contact4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/c3" />
         </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/const_call"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:clickable="true"
-        android:focusable="true"
         android:layout_marginTop="42dp"
         android:background="@drawable/btn_record"
+        android:clickable="true"
+        android:focusable="true"
         android:paddingVertical="10dp"
         android:paddingStart="20dp"
         app:layout_constraintTop_toBottomOf="@id/constraint_for_image">
@@ -186,10 +198,10 @@
             android:id="@+id/btn_call"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:text="CALL AGAIN"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:fontFamily="@font/ff_montserrat_alternates_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -197,11 +209,11 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="12dp"
-        android:id="@+id/const_play"
         android:background="@drawable/btn_play_game"
         android:paddingVertical="10dp"
         android:paddingStart="20dp"
@@ -220,8 +232,8 @@
             android:id="@+id/btn_play_game"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Play games"
             android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:text="Play games"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -239,30 +251,30 @@
         android:background="@drawable/btn_record"
         app:layout_constraintEnd_toStartOf="@id/tv_rate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/const_play" >
+        app:layout_constraintTop_toBottomOf="@id/const_play">
 
         <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_share"
-            app:layout_constraintEnd_toStartOf="@id/btn_share"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintEnd_toStartOf="@id/btn_share"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:paddingVertical="10dp"
-            android:textColor="@color/white"
-            android:fontFamily="@font/ff_montserrat_alternates_regular"
-            android:text="Share"
             android:id="@+id/btn_share"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="16sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
+            android:paddingVertical="10dp"
+            android:text="Share"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -290,9 +302,9 @@
             android:id="@+id/btn_rate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:paddingVertical="10dp"
             android:text="Rate us"
-            android:fontFamily="@font/ff_montserrat_alternates_regular"
             android:textColor="@color/tv_blue_text"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -302,15 +314,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:layout_constraintBottom_toBottomOf="parent"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-    </com.google.android.gms.ads.AdView>
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:layout_constraintBottom_toBottomOf="parent"></com.google.android.gms.ads.AdView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
